2007-09-18  Dmitry Dulepov  <dmitry@typo3.org>

 * Removed "DEFAULT '0'" from "uid" column in tx_realurl_uniqalias
 * Fixed bug 5369: Converting to InnoDB
 * Changed primary key for tx_realurl_errorlog to prevent errors about duplicate entries
 * Optimized query to tx_realurl_errorlog

2007-09-14  Dmitry Dulepov  <dmitry@typo3.org>

 * If decoded entry is not in cache, it will be added there when TSFE has completed request

2007-09-12  Dmitry Dulepov  <dmitry@typo3.org>

 * Fixed bug 2402: RealURL+tx_realurl_advanced: xxx was not a keyword for a postVarSet
 * Fixed bug 4495: When logged in from BE, produces error: Segment "zzz" was not a keyword for a postVarSet as expected
 * Fixed bug 5784: function pageAliasToId is not DBAL-safe

2007-09-11  Dmitry Dulepov  <dmitry@typo3.org>

 * Added searching for rootpage_id by domain name (taking redirects into account)

2007-09-10  Dmitry Dulepov  <dmitry@typo3.org>

 * Fixed bug 4994: tx_realurl_pathcache must not be flushed!
 * Fixed bug 5150: Remove tx_realurl_pathcache table from MySQL Query Cache
 * Fixed bug 6257: pointless rootline lookup in multi-domain enviroment
 * Fixed bug 6051: RealURL does not set GET vars for use with TypoLink
 * Forced firstHitPathCache if no postVarSets or fixedPostVars defined

2007-09-10  Dmitry Dulepov  <dmitry@typo3.org>

 * Added autoconfiguration feature

2007-07-09  Dmitry Dulepov  <dmitry@typo3.org>

 * Fixed error in regular expression

2007-01-24  Dmitry Dulepov  <dmitry@typo3.org>

 * Removed enableDomainLookup and rootPageID from another place in the manual (thanks to Chris Paige for noticing it!)

2007-01-12  Dmitry Dulepov  <dmitry@typo3.org>

 * Release of RealURL 1.1.4

2007-01-04  Dmitry Dulepov  <dmitry@typo3.org>

 * Fixed bug 4007: realurl path in workspace is kept when published
 * Fixed bug 4395: Specified key was too long; max key length is 1000 bytes
 * Fixed bug 4485: RealURLs with no spaceCharacter
 * Fixed bug 4528: Deprecated function in documentation